<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RandomGeneratorFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/min_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/min_value_label"
                    android:inputType="numberSigned"
                    android:maxLength="14"
                    android:nextFocusDown="@+id/max_value_text"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/max_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/max_value_label"
                    android:inputType="numberSigned"
                    android:maxLength="14"
                    android:autofillHints="" />

            </LinearLayout>

            <TextView
                android:id="@+id/quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_label"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/quantity_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="49"
                android:progress="0"
                android:layout_marginBottom="12dp" />

            <TextView
                android:id="@+id/decimal_places_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decimal_places_label"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/decimal_places_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="5"
                android:progress="0"
                android:layout_marginBottom="12dp" />

            <CheckBox
                android:id="@+id/not_repeating_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_repeating_check_box" />


            <TextView
                android:id="@+id/result_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_label"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/result_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/colorTextResult" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/random_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/random_button"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/copy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/copy_button"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>